# gristmill

./: .gitignore  Cargo.toml  LICENSE  README.md  controls.ron
examples/: Cargo.toml  basic.rs  error.rs  gui.rs  gui_complex.rs  hello.rs  wasd.rs
examples/assets/images/: FrameRounded.ron
examples/config/: controls.ron
examples/src/: example_renderer.rs  lib.rs
gristmill/: Cargo.toml
gristmill-2d/: Cargo.toml
gristmill-2d/src/: lib.rs  renderer.rs
gristmill-2d/src/renderer/: atlas_rect.rs  mod.rs
gristmill-core/: Cargo.toml
gristmill-core/src/: asset.rs  geom2d.rs  input.rs  lib.rs
gristmill-core/src/asset/: image.rs  mod.rs
gristmill-examples/: Cargo.toml
gristmill-examples/assets/images/: FrameSquare.ron
gristmill-examples/resources/: fonts.ron  gui_textures.ron
gristmill-examples/src/: basic_geo_renderer.rs  basic_geo_subpass.rs  lib.rs
gristmill-gui/: Cargo.toml
gristmill-gui/src/: backend.rs  button.rs  color_rect.rs  console.rs  container.rs  event.rs  font.rs  layout.rs  layout_builder.rs  lib.rs  listener.rs  quad.rs  render.rs  text.rs  texture_rect.rs  unpack.rs
gristmill-gui/src/renderer/: mod.rs  text.rs  texture_rect.rs
gristmill-gui/src/unpack/: button.rs  image.rs  mod.rs  text.rs
gristmill-gui/src/widget/: button.rs  image.rs  mod.rs  panel.rs  style.rs  text.rs
gristmill-macros/: Cargo.toml
gristmill-macros/src/: lib.rs
gristmill-miniquad/: Cargo.toml
gristmill-miniquad/examples/: button.rs  particles.rs  scroll.rs  wasd.rs
gristmill-miniquad/examples/assets/: fonts.yaml  style.yaml  window.yaml
gristmill-miniquad/src/: lib.rs  texture.rs  window.rs
gristmill-render/: Cargo.toml
gristmill-render/src/: lib.rs  texture.rs  texture_rect.rs
gristmill/src/: console.rs  event.rs  game.rs  geom2d.rs  geometry2d.rs  input.rs  lib.rs  object.rs
gristmill/src/asset/: image.rs  mod.rs  resource.rs
gristmill/src/render/: material.rs  mod.rs  texture.rs  texture_rect.rs
gristmill/src/renderer/: mod.rs  pass.rs  scene.rs  subpass.rs  swapchain.rs
gristmill/src/renderer/loader/: mod.rs  texture.rs
gristmill/src/renderer/pipeline/: atlas_rect.rs  mod.rs  texture.rs  texture_rect.rs
gristmill/src/util/: forest.rs  handle.rs  mod.rs
src/: asset.rs  color.rs  console.rs  error.rs  event.rs  forest.rs  game.rs  game_loop.rs  geometry2d.rs  gui.rs  image.rs  input.rs  lang.rs  lib.rs  locale.rs  logger.rs  particles.rs  render2d.rs  sprite.rs  style.rs  text.rs  util.rs  window.rs
src/asset/: image.rs  mod.rs
src/gui/: button.rs  color_rect.rs  event.rs  font.rs  geometry.rs  inflate.rs  layout.rs  mod.rs  signal.rs  style.rs  text.rs  texture_rect.rs  toggle_group.rs
src/renderer/: mod.rs  pass.rs
src/renderer/pipeline/: mod.rs  text.rs  texture_rect.rs  textured_rect.rs
src/renderer/subpass/: example.rs  gui.rs  mod.rs  optional.rs
src/scene2d/: mod.rs  sprite.rs
src/util/: forest.rs
src/world2d/: mod.rs  shader.wgsl
