[package]
name = "gristmill"
version = "0.1.0"
authors = ["plash <plishhplashh@gmail.com>"]
edition = "2018"

[dependencies]

# Core
serde = "1.0"
ron = "0.6"
slotmap = { version = "1.0", features = ["serde"] }
palette = "*"

# Graphics
vulkano = "0.22"
vulkano-shaders = "0.22"
vulkano-win = "0.22"
winit = { version = "0.24", features = ["serde"] }
rusttype = { version = "0.9.2", features = ["gpu_cache"] }

# Assets
png = "*"
