[package]
name = "gristmill-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
gristmill-core = { path = "../gristmill-core" }
gristmill-render = { path = "../gristmill-render" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
linkme = "0.3"
toml = "0.5"
glyph_brush = "0.7"
vulkano = "0.32"