[package]
name = "gristmill"
version = "0.1.0"
authors = ["plash <plishhplashh@gmail.com>"]
edition = "2021"

[dependencies]

# Core
log = "0.4"
env_logger = "0.9"
serde = "1.0"
ron = "0.8"
downcast-rs = "1.2"
slab = "0.4"
glam = { version = "0.22", features = ["serde"] }
palette = { version = "0.6", features = ["serializing"] }
pareen = "0.3"

# Graphics
vulkano = "0.32"
vulkano-win = "0.32"
vulkano-shaders = "0.32"
bytemuck = "1.12"
winit = { version = "0.27", features = ["serde"] }

# Assets
image = { version = "0.24", default-features = false, features = ["png", "bmp"] }
