[package]
name = "gristmill"
version = "0.1.0"
authors = ["plash <plishhplashh@gmail.com>"]
edition = "2021"

[dependencies]
gristmill-core = { path = "../gristmill-core" }
gristmill-macros = { path = "../gristmill-macros" }
gristmill-render = { path = "../gristmill-render" }
gristmill-gui = { path = "../gristmill-gui" }
winit = "0.27"
game-loop = "0.10"
log = "0.4"
env_logger = "0.10"